--- a/TestBlazorApp/TestBlazorApp.csproj
+++ b/TestBlazorApp/TestBlazorApp.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="DevExpress.Blazor.ProjectTemplates" Version="23.2.4" />
+    <PackageReference Include="DevExpress.Data" Version="23.2.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
