--- a/ItemsAPI/ItemsAPI.csproj
+++ b/ItemsAPI/ItemsAPI.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="DevExpress.Blazor.ProjectTemplates" Version="23.2.4" />
-    <PackageReference Include="DevExpress.Data" Version="23.2.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\DataBase.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
