--- a/TestBlazorApp/ItemsBlazorApp.csproj
+++ b/TestBlazorApp/ItemsBlazorApp.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="DevExpress.Blazor.ProjectTemplates" Version="23.2.4" />
-	  <PackageReference Include="DevExpress.Data" Version="23.2.6" />
+	  <PackageReference Include="DevExpress.Blazor" Version="23.2.6" />
   </ItemGroup>
 
 </Project>
